--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@slidev/cli": "^0.49.9",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "d3": "^7.9.0",
+    "d3-array": "^3.2.4",
+    "d3-color": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-path": "^3.1.0",
     "vue": "^3.4.21"
   }
 }
