--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "d3-path": "^3.1.0",
+    "slidev-theme-dracula": "^0.2.0",
     "vue": "^3.4.21"
   }
 }
