--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@slidev/cli": "^0.49.9",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "asciinema-player": "^3.8.0",
     "chart.js": "^4.4.3",
     "d3": "^7.9.0",
     "d3-array": "^3.2.4",
